Fix code smells from Java code